--- a/style.css
+++ b/style.css
@@ -30,18 +30,178 @@
 
 body {
   margin: 0 auto;
-  padding-top: 100px;
   font-family: "TTLakes";
   max-width: 1120px;
   background: #f2f2f2;
 }
+
+.wrapper {
+  max-width: 1120px;
+}
+
+.header {
+  position: relative;
+}
+
+.nav {
+  width: 320px;
+  min-height: 100vh;
+  background-color: #fff;
+  position: absolute;
+  z-index: 500;
+  top: 0;
+  left: 0;
+  padding: 24px;
+  display: flex;
+  flex-flow: column nowrap;
+  box-shadow: 16px 0px 52px rgba(14, 24, 80, 0.2), -2px 0px 4px rgba(69, 79, 126, 0.02);
+}
+
+.nav__header {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+
+.logo {
+  margin-right: auto;
+}
+
+.button {
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+}
+
+.button-close {
+  margin-right: 15px;
+}
+
+.button-close::after {
+  background-image: url("images/close.svg");
+}
+
+.button-search::after {
+  background-image: url("images/search.svg");
+}
+
+button.btn::after {
+  margin: 0;
+}
+
+.nav__menu {
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 0;
+}
+
+.nav__menu li {
+  list-style: none;
+  margin-top: 24px;
+}
+
+.nav__menu li a {
+  display: inline-block;
+  line-height: 32px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  color: #1B1C21;
+  transition: all 0.3s ease;
+}
+
+.nav__menu li a:hover {
+  color: #7E7E82;
+}
+
+.nav__menu li a::before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 4px;
+  height: 32px;
+  margin-right: 24px;
+  margin-left: -24px;
+  background-color: transparent;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+
+.nav__menu li a:hover::before {
+  background-color: #41F6D7;
+}
+
+.nav__contact {
+  margin-top: auto;
+}
+
+.nav__contact-wrap {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.nav__contact-wrap .button {
+  margin-right: 15px;
+}
+
+.button-phone::after {
+  background-image: url("images/call.svg");
+}
+
+.button-message::after {
+  background-image: url("images/message.svg");
+}
+
+.button-user::after {
+  background-image: url("images/user.svg");
+}
+
+.nav__contact-mail {
+  display: block;
+  margin-top: 16px;
+  color: #1B1C21;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.nav__contact-phone-number {
+  display: block;
+  margin-top: 12px;
+  color: #1B1C21;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.nav__language {
+  margin-top: 40px;
+}
+
+.nav__language-link {
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+  color: #1B1C21;
+  transition: color 0.3s ease;
+}
+
+.nav__language-link:hover {
+  color: #7E7E82;
+}
+
 .service {
   max-width: 100%;
   padding-top: 42px;
   padding-bottom: 26px;
   padding-right: 25px;
+  padding-left: 32px;
   background: #f8f8f8;
 }
+
 .service-header {
   max-width: 100%;
   display: flex;
@@ -49,6 +209,7 @@ body {
 }
 
 .service-header h2 {
+  margin-left: -32px;
   padding-left: 32px;
   border-left: 2px solid #41f6d7;
   color: #1b1c21;
@@ -57,78 +218,105 @@ body {
   margin-right: auto;
 }
 
-.service-header__par1 {
+.service-header__link1 {
   margin-left: auto;
   margin-right: 32px;
+}
+
+.service-header__link2 {
+  padding-right: 7px;
+}
+
+.service-header__link1::after {
+  background-image: url("images/tools.svg");
+}
+
+.service-header__link2::after {
+  background-image: url("images/status.svg");
+}
+
+.btn {
   display: flex;
   align-items: center;
   font-size: 16px;
   color: #1b1c21;
   font-weight: 500;
   vertical-align: top;
+  text-decoration: none;
 }
-.service-header__par2 {
-  padding-right: 7px;
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  color: #1b1c21;
-  font-weight: 500;
-}
-.service-header__par1::after {
+
+.btn::after {
+  border-radius: 50%;
+  background-color: #ff3e79;
   margin-left: 9px;
   content: "";
   width: 40px;
   height: 40px;
-  background-image: url("images/svg1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: background-color 0.3s ease;
 }
-.service-header__par2::after {
-  margin-left: 9px;
-  content: "";
-  width: 40px;
-  height: 40px;
-  background-image: url("images/svg2.svg");
+
+.btn:hover::after {
+  background-color: #92324f;
 }
-.service-nav {
-  padding-left: 10px;
+
+.service-nav__wrap {
   display: flex;
-  justify-content: space-between;
   flex-flow: row wrap;
   align-items: center;
+  padding-inline-start: 0;
 }
-.service-nav a {
-  height: 40px;
-  padding: 7px 21px 8px 21px;
+
+.service-nav__wrap li {
+  list-style: none;
+  padding: 0 17px;
+  border-radius: 6px;
+  border: 2px solid transparent;
+}
+
+.service-nav li a {
+  display: inline-block;
+  line-height: 40px;
   text-decoration: none;
   font-size: 16px;
   color: #7e7e82;
-  border-radius: 6px;
 }
-.service-nav a:hover {
+
+.service-nav__wrap li:hover {
   border: 2px solid #b8ffec;
   background-color: #fff;
 }
+
 .service-info {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
 }
-.service-info__article {
+
+.service-info__text-wrap {
+  padding-right: 32px;
   width: 50%;
-  padding-left: 34px;
-}
-.service-info__img {
-  max-width: 532px;
-  max-height: 307px;
 }
 
-.serice-info__text {
+.service-info__img {
+  max-width: 50%;
+  max-height: auto;
+  border-radius: 6px;
+}
+
+.service-info__text {
   color: #1b1c21;
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
 }
-.serice-info__button {
+
+.service-info__text:first-child {
+  margin-bottom: 20px;
+}
+
+.service-info__button {
   background-color: transparent;
   border: none;
   color: #1b1c21;
@@ -137,7 +325,8 @@ body {
   margin-top: 14px;
   margin-left: 64px;
 }
-.serice-info__button::before {
+
+.service-info__button::before {
   content: "";
   height: 10px;
   width: 8px;
